concord_macros/tests/trybuild/fail/codegen/record_endpoint_execute_websocket.stderr
error[E0599]: the method `execute_websocket` exists for struct `PendingRequest<'_, RecordEndpointExecuteWebSocketApiCx, EpTailH03da57fb09094b03, ReqwestTransport>`, but its trait bounds were not satisfied
  --> tests/trybuild/fail/codegen/record_endpoint_execute_websocket.rs:21:24
   |
10 | / api! {
11 | |     client RecordEndpointExecuteWebSocketApi {
12 | |         base "https://example.com"
...  |
15 | |     GET Tail
   | |____________- doesn't satisfy `_: WebSocketEndpoint<RecordEndpointExecuteWebSocketApiCx>`
...
21 |       let _ = api.tail().execute_websocket().await.unwrap();
   |                          ^^^^^^^^^^^^^^^^^
   |
   = note: the following trait bounds were not satisfied:
           `EpTailH03da57fb09094b03: WebSocketEndpoint<RecordEndpointExecuteWebSocketApiCx>`
note: the trait `WebSocketEndpoint` must be implemented
  --> $WORKSPACE/concord_core/src/endpoint.rs
   |
   | pub trait WebSocketEndpoint<Cx: ClientContext>: Endpoint<Cx> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
